# lang_chain

./: .flake8  .gitignore  .pylintrc  README.md  makefile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
notebooks/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  L4-QnA.ipynb  L5-Evaluation.ipynb  L6-Agents.ipynb
